# yari-search

./: .gitignore  README.md  pyproject.toml
tests/: test_yari_search.py
yari_search/: main.py  models.py
