[tool.poetry]
name = "yari-search"
version = "0.1.0"
description = ""
authors = ["Peter Bengtsson <mail@peterbe.com>"]

[tool.poetry.dependencies]
python = "^3.8"
elasticsearch-dsl = "^7.1.0"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
yari-search = "yari_search.main:main"
